--- a/css/custom.css
+++ b/css/custom.css
@@ -27,10 +27,7 @@ h2 {
 }
 
 #area-info {
-  position: absolute !important;
   font-family: sans-serif;
-  margin-top: 70vh;
-  margin-left: 10px;
   padding: 5px;
   width: 30%;
   min-width: 300px;
@@ -39,8 +36,6 @@ h2 {
   color: #222;
   background-color: #fff;
   border-radius: 3px;
-  z-index: 1;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .mapboxgl-popup-content {
@@ -76,9 +71,6 @@ hr {
 @media screen and (max-width: 767px) {
   #map {
     height: 80vh;
-  }
-  #area-info {
-    margin-top: 65vh;
   }
 }
 
@@ -116,4 +108,9 @@ hr {
     url("/css/fonts/ColabThi-webfont.svg#ColaborateThinRegular") format("svg");
   font-weight: normal;
   font-style: normal;
+}
+
+/* Choices.js style overrides */
+.choices__list {
+  z-index: 3 !important;
 }
